# ready-for-datasette

./: .gitignore  README.md  generate_report.py  merge_test_results.py  plugins.json  plugins.txt  pyproject.toml  run_plugin_tests.py  select_test_matrix.py  test-plugin-in-container.sh  test-plugin.sh  test_generate_report.py  test_merge_test_results.py  test_run_plugin_tests.py  test_select_test_matrix.py  test_update_plugins.py  update_plugins.py
.github/workflows/: publish.yml  test-plugins.yml  update-plugins.yml
results/: index.json
results/datasette-accounts/datasette-1.0a36/: latest.json
results/datasette-accounts/datasette-1.0a37/: latest.json
results/datasette-acl-share/datasette-1.0a36/: latest.json
results/datasette-acl/datasette-1.0a36/: latest.json
results/datasette-agent-charts/datasette-1.0a36/: latest.json
results/datasette-agent-charts/datasette-1.0a37/: latest.json
results/datasette-agent-micropython/datasette-1.0a36/: latest.json
results/datasette-agent-micropython/datasette-1.0a37/: latest.json
results/datasette-agent-openai-imagegen/datasette-1.0a37/: latest.json
results/datasette-agent-sprites/datasette-1.0a36/: latest.json
results/datasette-agent/datasette-1.0a36/: latest.json
results/datasette-alerts-desktop/datasette-1.0a37/: latest.json
results/datasette-alerts-ntfy/datasette-1.0a36/: latest.json
results/datasette-alerts/datasette-1.0a37/: latest.json
results/datasette-allow-permissions-debug/datasette-1.0a36/: latest.json
src/ready_for_datasette/: __init__.py  cli.py
test/: test_ready_for_datasette_cli.py
(+367 files in other folders)
