[project]
name = "ready-for-datasette"
version = "0.1"
description = "Check whether a repository is ready to ship as a Datasette plugin"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "packaging>=24.0",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ready-for-datasette = "ready_for_datasette.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
